add get my pots pageable